--- a/Untitled-2.css
+++ b/Untitled-2.css
@@ -63,5 +63,6 @@ img {
     position: fixed;
     left: 30px;
     bottom: 10px;
-    transition: all 1000ms;
+    transition: all 1000ms
+    opacity: 30%;
 }
