--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -73,20 +73,119 @@ p.thetext {
     color: rgb(255, 255, 255);
 }
 
+img.game {
+    width: 120px;
+    height: 120px;
+    border-radius: 30%;
+}
+
+img.logo {
+    width: 120px;
+    height: 120px;
+    animation: logo 3000ms infinite;
+    border-radius: 0%;
+}
+
+a.download {
+    font-size: 80px;
+    text-decoration: none;
+    color: rgb(72, 72, 72);
+}
+
+a.information {
+    font-size: 30px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+a.download:hover {
+    font-size: 120px;
+    color: rgb(32, 84, 48);
+    background-color: rgb(29, 29, 29);
+}
+
+a.information:hover {
+    font-size: 30px;
+    color: rgb(210, 255, 223);
+    background-color: rgb(29, 29, 29);
+}
+
+* {
+    transition: all 300ms;
+}
+
+body {
+    background-color: rgb(49, 49, 49);
+}
+
+div.logo {
+    width: 2000px;
+    height: 120px;
+}
+
+p.iii {
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    position: relative;
+    top: -110px;
+    left: 140px;
+}
+
+div.logo {
+    background-color: rgb(0, 88, 31);
+}
+
+div.i {
+    width: 30px;
+    height: 30px;
+}
+
+#opisanie {
+    color: rgb(255, 255, 255);
+}
+
+p.thetext {
+    color: rgb(255, 255, 255);
+}
+
 @keyframes logo {
     0% {
         transform: rotate(0deg);
         border-radius: 0%;
     }
 
-    50% {
+    25% {
         transform: rotate(300);
         border-radius: 50%;
     }
 
+    75% {
+        transform: rotate(300);
+        border-radius: 50%;
+    }
+
+
     100% {
         transform: rotate(360deg);
         border-radius: 0%;
+    }
+}
+
+body {
+    animation: fnaf 3000ms infinite;
+}
+
+@keyframes fnaf {
+    0% {
+        background-color: rgb(6, 52, 33);
+    }
+
+    50% {
+        background-color: rgb(12, 30, 23);
+    }
+
+    100% {
+        background-color: rgb(6, 52, 33);
     }
 }
 
